[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/scenes/MazeSelector.gd" type="Script" id=1]

[node name="HUD" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 48.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 41.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1005.0
margin_bottom = 29.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 34.0
margin_bottom = 19.0
text = "View:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewSelect" type="OptionButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 38.0
margin_right = 67.0
margin_bottom = 24.0

[node name="AlgorithmLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 71.0
margin_top = 5.0
margin_right = 138.0
margin_bottom = 19.0
text = "Algorithm:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlgorithmSelect" type="OptionButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 142.0
margin_right = 171.0
margin_bottom = 24.0

[node name="SizeLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 175.0
margin_top = 5.0
margin_right = 205.0
margin_bottom = 19.0
text = "Size:"

[node name="ColumnsTextEdit" type="TextEdit" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 209.0
margin_right = 249.0
margin_bottom = 24.0
rect_min_size = Vector2( 40, 0 )
text = "16"

[node name="x" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 253.0
margin_top = 5.0
margin_right = 260.0
margin_bottom = 19.0
text = "x"

[node name="RowsTextEdit" type="TextEdit" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 264.0
margin_right = 304.0
margin_bottom = 24.0
rect_min_size = Vector2( 40, 0 )
text = "16"

[node name="NewMazeButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 348.0
margin_bottom = 24.0
text = "New"

[node name="VSeparator3" type="VSeparator" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 352.0
margin_right = 356.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewMaskedMazeButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 360.0
margin_right = 421.0
margin_bottom = 24.0
text = "Masked"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 425.0
margin_right = 429.0
margin_bottom = 24.0

[node name="DistancesCheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 433.0
margin_right = 524.0
margin_bottom = 24.0
text = "Distances"

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 528.0
margin_right = 532.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeadEndsLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 536.0
margin_top = 5.0
margin_right = 620.0
margin_bottom = 19.0
text = "Dead ends: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeadEndsCheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 624.0
margin_right = 685.0
margin_bottom = 24.0
text = "Show"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaskPopupPanel" type="PopupPanel" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_right = 8.0
margin_bottom = 8.0

[node name="MaskGrid" type="GridContainer" parent="PanelContainer/MarginContainer/HBoxContainer/MaskPopupPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_top = 52.0
margin_right = 1024.0
margin_bottom = 1076.0
rect_min_size = Vector2( 1024, 1024 )
input_pass_on_modal_close_click = false
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 1024 )
handle_input_locally = false
render_target_update_mode = 3

[connection signal="item_selected" from="PanelContainer/MarginContainer/HBoxContainer/ViewSelect" to="." method="_on_MazeSelect_item_selected"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/HBoxContainer/AlgorithmSelect" to="." method="_on_AlgorithmSelect_item_selected"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/NewMazeButton" to="." method="_on_NewMazeButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/NewMaskedMazeButton" to="." method="_on_NewMaskedMaze_pressed"]
[connection signal="toggled" from="PanelContainer/MarginContainer/HBoxContainer/DistancesCheckbox" to="." method="_on_DistancesCheckbox_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/HBoxContainer/DeadEndsCheckbox" to="." method="_on_DeadEndsCheckbox_toggled"]
